[project]
name = "rutils"
version = "0.1.0"
description = "Python project created to explore a problem."
license = { text = "MIT" }
readme = "README.md"
repository = "https://github.com/romanchyla/rutils"
documentation = "https://rutils.readthedocs.io"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]

packages = [
    "rutils",
]

dependencies = [
    "click==8.1.3",
    "concurrent-log-handler==0.9.16",
    "python-dateutil==2.8.1",
    "DateTime==4.1.1",
    "SQLAlchemy==1.3.16",
    "python-json-logger==0.1.8",
    "unidecode==0.04.21",
    "requests>=2.19.0",
    "future==0.18.2",
]

[[project.authors]]
name = "Roman Chyla"
email = "roman.chyla@gmail.com"

[project.urls]
Source = "https://github.com/romanchyla/rutils"
Documentation = "https://rutils.readthedocs.io"
[project.optional-dependencies]
dev = [
    "black==22.3.0",
    "flake8==4.0.1",
    "isort==5.10.1",
    "pytest==6.2.5",
    "pyupgrade==2.29.1",
    "pytest-mock==3.6.1",
    "pre-commit==2.16.0",
    "coveralls==3.3.1",
    "mock==4.0.3",
    "coverage==6.2",
    "pytest-cov==3.0.0",
    "pytest-cookies==0.6.1",
    "semantic-release==0.1.0",
]

docs = [
    "Sphinx==4.3.1",
    "myst-parser==0.15.2",
    "sphinx-rtd-theme==1.0.0",
]

[tool.semantic_release]
branch = "main"
version_toml = "pyproject.toml:project.version"
version_variable = "rutils/version.py:__version__"
build_command = "flit build"
[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=rutils"
cache_dir = ".tmp/"
[tool.coverage.run]
data_file = ".tmp/.coverage"

[tool.coverage.report]
skip_empty = true
skip_covered = true
[tool.isort]
profile = "black"
known_first_party = [
    "rutils",
    "tests",
]

[tool.black]
line-length = 99

[build-system]
requires = [
    "setuptools==60.10.0",
    "wheel",
    "flit_core >=3.2,<4",
    "ppsetuptools==2.0.2",
]

build-backend = "flit_core.buildapi"

[xsetup]
scripts = [
]

[xsetup.entry_points]
console_scripts = [
    "rutils=rutils.cli:cli",
]

